--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2705,7 +2705,7 @@ input, select, textarea {
 		-webkit-justify-content: space-between;
 		-ms-justify-content: space-between;
 		justify-content: space-between;
-		background: #00264d;
+		background: #003262;
 		color: #00264d;
 		height: 100%;
 		overflow-y: auto;
