change blue color again 2

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2706,7 +2706,7 @@ input, select, textarea {
 		-ms-justify-content: space-between;
 		justify-content: space-between;
 		background: #002676;
-		color: #00264d;
+		color: #002676;
 		height: 100%;
 		overflow-y: auto;
 		position: fixed;
